--- a/css/INFO20005.css
+++ b/css/INFO20005.css
@@ -786,12 +786,12 @@
     .product_intro p:nth-of-type(1) {
         border-bottom: none;
     }
-    .middle_page {
+    #product_page_mobile .middle_page {
         width: 86.67%;
         height: 144px;
         border: 1px solid black;
         margin: 0 auto;
-        margin-top: 5px;
+        margin-top: -20px;
         text-align: center;
         font-size: 13px;
     }
@@ -803,8 +803,6 @@
         text-decoration: underline;
     }
     #product_page_mobile .bottom_page {
-        width: 100%;
-        border: black 1px solid;
         margin-top: 45px;
         margin-bottom: 45px;
     }
@@ -1043,15 +1041,10 @@
     .bottom_page {
         width: 100%;
         border: black 1px solid;
+        border-left: none;
+        border-right: none;
         margin-top: 17px;
         margin-bottom: 50px;
-    }
-    .bottom_page .text {
-        margin-top: 8px;
-        margin-left: 18px;
-        margin-bottom: 4px;
-        font-style: italic;
-        font-size: 20px;
     }
     /* Checkout */
     #checkout_desktop {
@@ -1309,7 +1302,7 @@
     }
     .middle_page_signup {
         width: 100%;
-        padding: 10px 16px;
+        padding: 8px 16px;
     }
     .middle_page_login {
         width: 100%;
@@ -1322,14 +1315,12 @@
         text-align: center;
     }
     .middle_page {
-        width: 100%;
         padding: 12px 8px 8px 8px;
         border: 1px solid #000;
         text-align: center;
         margin-top: -10px;
         display: flex;
         flex-direction: column;
-        height: 127px;
     }
     .text1 {
         width: 100%;
